--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
     "db:sync": "prisma generate && prisma db push"
   },
   "dependencies": {
+    "@fastify/static": "^6.5.0",
     "@nestjs/common": "^9.0.8",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.8",
     "@nestjs/cqrs": "^9.0.1",
     "@nestjs/mapped-types": "^1.1.0",
-    "@nestjs/platform-express": "^9.0.8",
+    "@nestjs/platform-fastify": "^9.0.8",
     "@nestjs/swagger": "^6.0.5",
     "@prisma/client": "^4.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "express": "^4.18.1",
+    "fastify": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
-    "swagger-ui-express": "^4.5.0",
     "uuid": "^8.3.2",
     "webpack": "5.74.0"
   },
@@ -47,7 +47,6 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.8",
-    "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
     "@types/node": "^18.6.3",
     "@types/supertest": "^2.0.12",
