--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-fastify": "^9.0.8",
     "@nestjs/swagger": "^6.0.5",
     "@prisma/client": "^4.1.1",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fastify": "^4.3.0",
@@ -48,6 +49,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.8",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "28.1.6",
     "@types/node": "^18.6.3",
     "@types/supertest": "^2.0.12",
