--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack": "5.74.0"
   },
   "devDependencies": {
+    "@darraghor/eslint-plugin-nestjs-typed": "^3.11.2",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.8",
