--- a/package.json
+++ b/package.json
@@ -15,32 +15,33 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:watch": "npm run test:setup:db && DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest jest --watch",
+    "test:cov": "npm run test:setup:db && DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest jest --coverage",
+    "test:debug": "npm run test:setup:db && DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "npm run test:setup:db && DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest jest --config ./test/jest-e2e.json",
     "db:push": "prisma db push",
     "db:sync": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:generate": "prisma generate && npm run format"
+    "db:generate": "prisma generate && npm run format",
+    "test:setup:db": "DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest npx prisma db push --force-reset"
   },
   "dependencies": {
     "@fastify/multipart": "^7.1.0",
     "@fastify/static": "^6.5.0",
-    "@nestjs/common": "^9.0.8",
+    "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.8",
+    "@nestjs/core": "^9.0.11",
     "@nestjs/cqrs": "^9.0.1",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.1.0",
-    "@nestjs/platform-fastify": "^9.0.8",
+    "@nestjs/platform-fastify": "^9.0.11",
     "@nestjs/swagger": "^6.0.5",
-    "@prisma/client": "^4.1.1",
+    "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "fastify": "^4.3.0",
-    "ioredis": "^5.2.2",
+    "fastify": "^4.5.2",
+    "ioredis": "^5.2.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
@@ -51,25 +52,25 @@
     "@darraghor/eslint-plugin-nestjs-typed": "^3.11.2",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.8",
+    "@nestjs/testing": "^9.0.11",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "28.1.6",
-    "@types/node": "^18.6.3",
+    "@types/jest": "28.1.8",
+    "@types/node": "^18.7.13",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "eslint": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "28.1.3",
+    "jest": "29.0.0",
     "prettier": "^2.7.1",
-    "prisma": "^4.1.1",
+    "prisma": "^4.2.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
-    "ts-jest": "28.0.7",
+    "ts-jest": "28.0.8",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.7.4"
+    "tsconfig-paths": "4.1.0",
+    "typescript": "^4.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
