--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,14 @@
     "**/*.json": true,
     "**/.eslintrc.js": true,
     "**/prisma": true,
-    "**/*.env": true
+    "**/*.env": true,
+    "**/*.js": true
   },
   "search.exclude": {
     "**/*.json": false,
     "**/.eslintrc.js": false,
     "**/prisma": false,
-    "**/*.env": false
+    "**/*.env": false,
+    "**/*.js": false
   }
 }
