--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "npm run test:setup:db && DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest jest --watch",
-    "test:cov": "npm run test:setup:db && DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest jest --coverage",
-    "test:debug": "npm run test:setup:db && DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "npm run test:setup:db && DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest jest --config ./test/jest-e2e.json",
+    "test": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --config ./test/jest-spec.js",
+    "test:watch": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --watch --config ./test/jest-spec.js",
+    "test:cov": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --coverage --config ./test/jest-spec.js",
+    "test:debug": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./test/jest-spec.js",
+    "test:e2e": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --config ./test/jest-e2e.js",
     "db:push": "prisma db push",
     "db:sync": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate && npm run format",
-    "test:setup:db": "DATABASE_URL=postgres://postgres:postgres@localhost:5433/ratatatest npx prisma db push --force-reset"
+    "test:setup:db": "DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest npx prisma db push --force-reset"
   },
   "dependencies": {
     "@fastify/multipart": "^7.1.0",
