--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/jest": "28.1.8",
     "@types/node": "^18.7.13",
     "@types/supertest": "^2.0.12",
+    "@jest/test-sequencer": "^29.0.1",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.22.0",
