--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --config ./test/jest-spec.js",
+    "test": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --config ./test/jest-spec.js --runInBand",
     "test:cov": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --coverage --config ./test/jest-spec.js",
     "test:debug": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./test/jest-spec.js",
-    "test:e2e": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --config ./test/jest-e2e.js",
+    "test:e2e": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --config ./test/jest-e2e.js --runInBand",
     "db:push": "prisma db push",
     "db:sync": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@darraghor/eslint-plugin-nestjs-typed": "^3.11.2",
+    "@jest/test-sequencer": "^29.0.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.11",
@@ -56,7 +57,6 @@
     "@types/jest": "28.1.8",
     "@types/node": "^18.7.13",
     "@types/supertest": "^2.0.12",
-    "@jest/test-sequencer": "^29.0.1",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.22.0",
