--- a/package.json
+++ b/package.json
@@ -14,15 +14,12 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --config ./test/jest-spec.js --runInBand",
-    "test:cov": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --coverage --config ./test/jest-spec.js",
-    "test:debug": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./test/jest-spec.js",
-    "test:e2e": "npm run test:setup:db && DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest jest --config ./test/jest-e2e.js --runInBand",
+    "test": "jest --config ./test/jest-spec.js --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.js --runInBand",
     "db:push": "prisma db push",
     "db:sync": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:generate": "prisma generate && npm run format",
-    "test:setup:db": "DATABASE_URL=postgres://ragokan:hammer90@localhost:5432/ratatatest npx prisma db push --force-reset && clear"
+    "db:generate": "prisma generate && npm run format"
   },
   "dependencies": {
     "@fastify/multipart": "^7.1.0",
