--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ratata",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Amazing NestJS structure.",
+  "author": "ragokan",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -14,8 +14,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --config ./test/jest-spec.js --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.js --runInBand",
+    "test": "jest --config ./test/config/jest-spec.ts --runInBand",
+    "test:e2e": "jest --config ./test/config/jest-e2e.ts --runInBand",
     "db:push": "prisma db push",
     "db:sync": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -56,6 +56,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "dotenv": "^16.0.1",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "29.0.0",
