--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --config ./test/config/jest-spec.ts",
-    "test:e2e": "jest --config ./test/config/jest-e2e.ts",
+    "test": "jest --config ./test/config/jest-spec.ts --watchAll",
+    "test:e2e": "jest --config ./test/config/jest-e2e.ts --watchAll",
     "db:push": "prisma db push",
     "db:sync": "prisma db push",
     "db:migrate": "prisma migrate dev",
